--- a/Practice Project/contact.html
+++ b/Practice Project/contact.html
@@ -59,7 +59,7 @@
                         <label for="message">Your Message</label>
                         <br>
                         <textarea name="message" id="message" cols="30" rows="15"
-                            placeholder="Type Your Message header"></textarea>
+                            placeholder="Type Your Message here"></textarea>
                     </p>
                 </fieldset>
                 <button id="submit">Submit</button>
