--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -29,24 +29,24 @@
 
     <main>
         <section class="hero">
-            <h2>Welcome to My Page</h2>
+            <h2 class="color">Welcome to My Page</h2>
             <p>Your Journey to amazing web design starts here.</p>
             <a href="#about" class="cta-btn">Learn More</a>
         </section>
 
-        <section id="#feature">
-            <article>
+        <section id="feature">
+            <div>
                 <h3>Fast</h3>
                 <p>Our websites are optimized for performance and speed.</p>
-            </article>
-            <article>
+            </div>
+            <div>
                 <h3>Responsive</h3>
                 <p>Looks great on any device, from phone to desktops.</p>
-            </article>
-            <article>
+            </div>
+            <div>
                 <h3>Accessible</h3>
                 <p>We build with accessibility in mind for all users.</p>
-            </article>
+            </div>
         </section>
         
         <section id="projects">
@@ -71,24 +71,19 @@
             <h2>Contact</h2>
             <form>
                 <label for="name">Name</label>
-                <input type="text" id="name" name="name" required>
-
-                <br>
+                <input type="text" id="name" name="name" placeholder="Your Name" required>
 
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
-
-                <br>
+                <input type="email" id="email" name="email" placeholder="Your Email" required>
 
                 <label for="message">Message</label>
-                <textarea name="message" id="message" required></textarea>
+                <textarea name="message" id="message" placeholder="Your Message" required></textarea>
 
                 <button type="submit">Submit</button>
-                <button>Done</button>
             </form>
 
-            <p>Phone: <a href="+2349053611856">09053611856</a></p>
-            <p>Email: <a href="mailto:yinkriuse@gmail.com">yinkriuse@gmail.com</a></p>
+           <!--  <p>Phone: <a href="+2349053611856">09053611856</a></p>
+            <p>Email: <a href="mailto:yinkriuse@gmail.com">yinkriuse@gmail.com</a></p> -->
         </section>
     </main>
 
